@@ -5,7 +5,7 @@
 // Modified by Martin Alnes, 2008.
 //
 // First added:  2007-12-10
-// Last changed: 2009-09-29
+// Last changed: 2009-10-01
 
 #include <string>
 #include <dolfin/common/NoDeleter.h>
@@ -25,7 +25,7 @@ Form::Form()
   // Do nothing
 }
 //-----------------------------------------------------------------------------
-Form::Form(dolfin::uint rank, dolfin::uint num_coefficients)
+Form::Form(uint rank, uint num_coefficients)
   : _function_spaces(rank),
     _coefficients(num_coefficients)
 {
@@ -91,7 +91,7 @@ const Mesh& Form::mesh() const
   return *meshes[0];
 }
 //-----------------------------------------------------------------------------
-const boost::shared_ptr<const FunctionSpace> Form::function_space(dolfin::uint i) const
+const boost::shared_ptr<const FunctionSpace> Form::function_space(uint i) const
 {
   assert(i < _function_spaces.size());
   return _function_spaces[i];
@@ -102,10 +102,54 @@ std::vector<boost::shared_ptr<const FunctionSpace> > Form::function_spaces() con
   return _function_spaces;
 }
 //-----------------------------------------------------------------------------
-const Coefficient& Form::coefficient(dolfin::uint i) const
+void Form::set_coefficient(uint i, const Coefficient& coefficient)
+{
+  assert(i < _coefficients.size());
+  _coefficients[i] = reference_to_no_delete_pointer(coefficient);
+}
+//-----------------------------------------------------------------------------
+void Form::set_coefficient(uint i,
+                           boost::shared_ptr<const Coefficient> coefficient)
+{
+  assert(i < _coefficients.size());
+  _coefficients[i] = coefficient;
+}
+//-----------------------------------------------------------------------------
+void Form::set_coefficient(std::string name,
+                           const Coefficient& coefficient)
+{
+  set_coefficient(coefficient_number(name), coefficient);
+}
+//-----------------------------------------------------------------------------
+void Form::set_coefficient(std::string name,
+                           boost::shared_ptr<const Coefficient> coefficient)
+{
+  set_coefficient(coefficient_number(name), coefficient);
+}
+//-----------------------------------------------------------------------------
+void Form::set_coefficients(std::map<std::string, const Coefficient*> coefficients)
+{
+  std::map<std::string, const Coefficient*>::iterator it;
+  for (it = coefficients.begin(); it != coefficients.end(); ++it)
+    set_coefficient(it->first, *it->second);
+}
+//-----------------------------------------------------------------------------
+void Form::set_coefficients(std::map<std::string, boost::shared_ptr<const Coefficient> > coefficients)
+{
+  std::map<std::string, boost::shared_ptr<const Coefficient> >::iterator it;
+  for (it = coefficients.begin(); it != coefficients.end(); ++it)
+    set_coefficient(it->first, *it->second);
+}
+//-----------------------------------------------------------------------------
+const Coefficient& Form::coefficient(uint i) const
 {
   assert(i < _coefficients.size());
   return *_coefficients[i];
+}
+//-----------------------------------------------------------------------------
+const Coefficient& Form::coefficient(std::string name) const
+{
+  return coefficient(coefficient_number(name));
 }
 //-----------------------------------------------------------------------------
 std::vector<const Coefficient*> Form::coefficients() const
@@ -124,7 +168,7 @@ dolfin::uint Form::coefficient_number(const std::string & name) const
   return 0;
 }
 //-----------------------------------------------------------------------------
-std::string Form::coefficient_name(dolfin::uint i) const
+std::string Form::coefficient_name(uint i) const
 {
   // Create name like "w0", overloaded by Form subclasses generated by form compilers
   std::ostringstream name;
